Extra exception handling
-Now tries to detect if an emote is corrupt, and reacquire it if that occurs.

--- a/EnhancedTwitchChat/EnhancedTwitchChat.csproj
+++ b/EnhancedTwitchChat/EnhancedTwitchChat.csproj
@@ -31,8 +31,8 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <Prefer32Bit>false</Prefer32Bit>
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-    <PlatformTarget>x64</PlatformTarget>
+    <AllowUnsafeBlocks>false</AllowUnsafeBlocks>
+    <PlatformTarget>AnyCPU</PlatformTarget>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Assembly-CSharp">
