performance improvements and other updates
-Improve performance and dynamically rate limit chat messages if our fps dips too far below the refresh rate of the HMD
-Switch over (mostly) to AsyncTwitch parsing
-Implement memory pooling class for emotes/badges
-Lots of other stuff

--- a/EnhancedTwitchChat/EnhancedTwitchChat.csproj
+++ b/EnhancedTwitchChat/EnhancedTwitchChat.csproj
@@ -116,19 +116,18 @@
     <Compile Include="Chat\ChatMover.cs" />
     <Compile Include="Chat\LockToggle.cs" />
     <Compile Include="Sprites\AnimatedSprite.cs" />
-    <Compile Include="Sprites\AnimatedSpriteLoader.cs" />
     <Compile Include="Sprites\AnimationController.cs" />
     <Compile Include="Sprites\SpriteLoader.cs" />
-    <Compile Include="Sprites\SpriteParser.cs" />
+    <Compile Include="Chat\MessageParser.cs" />
     <Compile Include="Sprites\AnimatedSpriteDecoder.cs" />
     <Compile Include="UI\BeatSaberUI.cs" />
     <Compile Include="Chat\ChatHandler.cs" />
     <Compile Include="UI\Drawing.cs" />
-    <Compile Include="Gameplay\ExtraBomb.cs" />
     <Compile Include="UI\GameOptionToggle.cs" />
     <Compile Include="UI\NGUIUtil.cs" />
     <Compile Include="Plugin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utilities\ObjectPool.cs" />
     <Compile Include="Utilities\SimpleJSON.cs" />
     <Compile Include="Chat\TwitchIrcClient.cs" />
     <Compile Include="Utilities\Utilities.cs" />
