--- a/EnhancedTwitchChat/EnhancedTwitchChat.csproj
+++ b/EnhancedTwitchChat/EnhancedTwitchChat.csproj
@@ -119,16 +119,13 @@
     <Compile Include="Config.cs" />
     <Compile Include="Chat\ChatMover.cs" />
     <Compile Include="Chat\LockToggle.cs" />
-    <Compile Include="Sprites\AnimatedSprite.cs" />
-    <Compile Include="Sprites\AnimationController.cs" />
-    <Compile Include="Sprites\SpriteDownloader.cs" />
+    <Compile Include="Textures\TextureAnimator.cs" />
+    <Compile Include="Textures\AnimationController.cs" />
+    <Compile Include="Textures\TextureDownloader.cs" />
     <Compile Include="Chat\MessageParser.cs" />
-    <Compile Include="Sprites\AnimatedSpriteDecoder.cs" />
-    <Compile Include="UI\BeatSaberUI.cs" />
+    <Compile Include="Textures\AnimationDecoder.cs" />
     <Compile Include="Chat\ChatHandler.cs" />
     <Compile Include="UI\Drawing.cs" />
-    <Compile Include="UI\GameOptionToggle.cs" />
-    <Compile Include="UI\NGUIUtil.cs" />
     <Compile Include="Plugin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utilities\ObjectPool.cs" />
