various bugfixes and improvements
-Now removes your search/playlist filter from song downloader/song browser if it's enabled when you accept a song request (this is so the RequestBot can find the appropriate song in the list and scroll to it)
-Remove duplicates from the song list when they are detected
   *This only removes the visual entry in the song list if it has the same hash. This is to fix an issue with song downloader/song browser (at least I think it's a bug with one of those) that causes songs to duplicate in the list if they are downloaded then deleted, then redwonloaded without restarting the game (not sure if this condition is even possible without the request bot)
-Rename TwitchChannel to TwitchChannelName in attempt to prevent common mistakes
   *Config will automaticlly upgrade old config versions and maintain their original TwitchChannel setting
-Implemented support for blacklisting songs in the request bot
   *A future release will also have an interface to remove songs from the blacklist
-Fix a bug that caused no emotes to be displayed if the user manually copied an old Sprites folder with content in it after it was migrated over to the Images folder.
-Update DownloadFile code and implement async sprite downloader for cover art images

--- a/EnhancedTwitchChat/EnhancedTwitchChat.csproj
+++ b/EnhancedTwitchChat/EnhancedTwitchChat.csproj
@@ -45,6 +45,9 @@
     <Reference Include="BeatSaberCustomUI">
       <HintPath>..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\Beat Saber\Plugins\BeatSaberCustomUI.dll</HintPath>
     </Reference>
+    <Reference Include="BeatSaverDownloader">
+      <HintPath>..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\Beat Saber\Plugins\BeatSaverDownloader.dll</HintPath>
+    </Reference>
     <Reference Include="IllusionInjector, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\Beat Saber\Beat Saber_Data\Managed\IllusionInjector.dll</HintPath>
@@ -77,6 +80,10 @@
     <Reference Include="UnityEngine.AssetBundleModule, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\Beat Saber\Beat Saber_Data\Managed\UnityEngine.AssetBundleModule.dll</HintPath>
+    </Reference>
+    <Reference Include="UnityEngine.AudioModule, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\Beat Saber\Beat Saber_Data\Managed\UnityEngine.AudioModule.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.CoreModule">
       <HintPath>..\..\..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\Beat Saber\Beat Saber_Data\Managed\UnityEngine.CoreModule.dll</HintPath>
@@ -123,7 +130,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Chat\RequestBot.cs" />
+    <Compile Include="Bot\RequestBot.cs" />
+    <Compile Include="Bot\RequestBotListViewController.cs" />
     <Compile Include="UI\ColorExtensions.cs" />
     <Compile Include="Config.cs" />
     <Compile Include="Chat\ChatMover.cs" />
