--- a/EnhancedTwitchChat/EnhancedTwitchChat.csproj
+++ b/EnhancedTwitchChat/EnhancedTwitchChat.csproj
@@ -131,6 +131,7 @@
     <Compile Include="Bot\RequestInfo.cs" />
     <Compile Include="Bot\RequestUserTracker.cs" />
     <Compile Include="Bot\SongRequest.cs" />
+    <Compile Include="Bot\RequestQueue.cs" />
     <Compile Include="Chat\MessageHandlers.cs" />
     <Compile Include="Chat\TwitchMessage.cs" />
     <Compile Include="Chat\TwitchWebSocketClient.cs" />
