Checkpoint. Refactoring of the command engine has begun. Command methods can now be called within the BOTCOMMAND class. This allows access to command properties, and make a lot of things just work. Since this is being mutated into the code, all existing functions still work.

--- a/EnhancedTwitchChat/EnhancedTwitchChat.csproj
+++ b/EnhancedTwitchChat/EnhancedTwitchChat.csproj
@@ -126,6 +126,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Bot\ChatCommands.cs" />
+    <Compile Include="Bot\commands.cs" />
     <Compile Include="Bot\ListManager.cs" />
     <Compile Include="Bot\RequestBot.cs" />
     <Compile Include="Bot\RequestBotListViewController.cs" />
